--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,7 +1,6 @@
 
 .styleButton {
     border-radius: 4px;
-    padding: 8px 16px;
     background-color: #3CBE6B;
     border: 1px solid white;
     color: white;
@@ -27,6 +26,7 @@
     .styleButton {
         width: 75px;
         font-size: 0.5em;
+        padding: 1em 1em;
     }
     .styleButton + .styleButton {
         margin-left: 0.5em;
@@ -38,6 +38,7 @@
     .styleButton {
         width: 100px;
         font-size: 0.75em;
+        padding: 0.75em 1em;
     }
     .styleButton + .styleButton {
         margin-left: 0.75em;
@@ -49,6 +50,7 @@
     .styleButton {
         width: 125px;
         font-size: 1em;
+        padding: 0.75em 1em;
     }
     .styleButton + .styleButton {
         margin-left: 1em;
@@ -60,6 +62,7 @@
     .styleButton {
         width: 125px;
         font-size: 1em;
+        padding: 0.75em 1em;
     }
     .styleButton + .styleButton {
         margin-left: 1em;
@@ -71,18 +74,19 @@
     .styleButton {
         width: 150px;
         font-size: 1.25em;
+        padding: 0.5em 1em;
     }
     .styleButton + .styleButton {
         margin-left: 1em;
     }
 }
 
-
 /* Extra Large computer schermen */
 @media screen and (min-width: 1600px) {
     .styleButton {
         width: 150px;
         font-size: 1.25em;
+        padding: 0.5em 1em;
     }
     .styleButton + .styleButton {
         margin-left: 1em;
