--- a/src/pages/parkoverview/ParkOverview.css
+++ b/src/pages/parkoverview/ParkOverview.css
@@ -1,13 +1,14 @@
 
 /* ALGEMEEN */
 
-.outer-container-parkoverview {
-    background-color: #EAE3D2;
-    /*height: 100vh;*/
+.parkoverview-outer-container {
     display: flex;
     flex-direction: column;
+    flex-basis: auto;
     flex-grow: 1;
-    border: 2px solid red;
+    flex-shrink: 1;
+    background-color: #EAE3D2;
+    min-height: 100vh;
 }
 
 /* PARKOVERVIEW HEADER */
@@ -17,35 +18,44 @@
     background-size: cover;
     background-position: center;
     max-width: 100%;
-    min-height: 800px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-start;
     text-align: center;
-    /*border-bottom: 1px solid #40CD32;*/
-    border: 2px solid blue;
+    border-bottom: 1px solid #40CD32;
 }
 
 .parkoverview-header-content {
-    margin: 0;
-    color: white;
-    border: 2px solid orange;
-}
-
-.park-cards-outer-container {
     display: flex;
     flex-direction: column;
-    border: 2px solid purple;
-    height: 100vh;
+    color: #FFFFFF;
 }
+
+/* PARKOVERVIEW TEXT SECTION */
+
+.parkoverview-text-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    max-width: 100%;
+    text-align: left;
+    flex-basis: auto;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.parkoverview-text-section-content {
+    display: flex;
+    flex-direction: column;
+}
+
+/* PARKOVERVIEW FILTER BUTTON */
 
 .filter-and-buttons {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     margin: 40px 0;
-    border: 2px solid green;
 }
 
 .style-filter-menu {
@@ -53,81 +63,337 @@
     border-radius: 4px;
     border: 1px solid white;
     color: #FFFFFF;
-    padding: 0 10px;
     cursor: pointer;
 }
 
-.style-filter-menu option {
-    position: absolute;
-    background-color: orange;
-    color: #FFFFFF;
-}
+/* PARKOVERVIEW PARK CARDS */
 
+.park-cards-outer-container {
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
 
 .park-cards-inner-container {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    flex-basis: 100vw;
     flex-wrap: wrap;
-    gap:30px;
-    margin: 5px 20px;
-    border: 2px solid lightblue;
+    flex-shrink: 1;
+    flex-grow: 1;
 }
 
 .park-card {
     display: flex;
     flex-direction: row;
-    height: 400px;
-    width: 400px;
-    border: 2px solid brown;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    border: 1px solid #FFFFFF;
+    flex-shrink: 1;
+    flex-grow: 0;
+    color: white;
+    background-color: #3CBE6B;
+    box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.4);
 }
 
-/* Extra Small Devices (phones, less than 576px) */
+.park-card a,
+.park-card a:visited,
+.park-card a:active {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.park-card a:hover {
+    color: #FB7302;
+}
+
+/* PARKOVERVIEW MEDIA QUERIES */
+
+/* Telefoon in portrait mode */
 @media screen and (max-width: 576px) {
     .parkoverview-header-content {
-        padding: 100px 0 40px 0;
+        padding: 8em 1em;
+        flex-basis: 95%;
+        margin: 1em;
     }
     .parkoverview-header-content h1 {
-        margin: 10px;
+        margin: 1em;
+    }
+    .parkoverview-text-section {
+        margin-top: 1em;
+        padding: 1em 2em;
+        line-height: 1em;
+    }
+    .parkoverview-text-section-content {
+        max-width: 85%;
+    }
+    .parkoverview-text-section-content h3 {
+        margin: 0.3em 0;
+    }
+    .parkoverview-text-section-content h5 {
+        margin: 0.3em 0;
+    }
+    .filter-and-buttons {
+        margin: 1em 0;
+    }
+    .style-filter-menu {
+        width: 100px;
+        font-size: 0.5em;
+        padding: 1em 1em;
+    }
+    .park-cards-inner-container {
+        padding: 0 0.75em;
+        gap: 0.5em;
+        margin: 0 0.5em;
+    }
+    .park-card {
+        width: 300px;
+        height: 225px;
+        margin: 0.75em;
+    }
+    .park-card h2 {
+        padding: 0 0.25em;
     }
 }
 
-/* Small Devices (phones, 576px and up) */
+/* Telefoon in landscape mode */
 @media screen and (min-width: 576px) and (max-width: 767px) {
     .parkoverview-header-content {
-        padding: 100px 0 40px 0;
+        padding: 5em 1em;
+        flex-basis: 70%;
+        margin: 1em;
     }
     .parkoverview-header-content h1 {
-        margin: 10px;
+        margin: 1em;
+    }
+    .parkoverview-text-section {
+        margin-top: 2em;
+        padding: 1em 2em;
+        line-height: 1.25em;
+    }
+    .parkoverview-text-section-content {
+        max-width: 65%;
+    }
+    .parkoverview-text-section-content h3 {
+        margin: 0.4em 0;
+    }
+    .parkoverview-text-section-content h5 {
+        margin: 0.4em 0;
+    }
+    .filter-and-buttons {
+        margin: 1.5em 0;
+    }
+    .style-filter-menu {
+        width: 150px;
+        font-size: 0.75em;
+        padding: 0.75em 1em;
+    }
+    .park-cards-inner-container {
+        padding: 0 0.75em;
+        gap: 0.5em;
+        margin: 0 1em;
+    }
+    .park-card {
+        width: 280px;
+        height: 210px;
+        margin: 0.5em;
+    }
+    .park-card h2 {
+        padding: 0 0.25em;
     }
 }
 
-/* Medium Devices (tablets, 768px and up) */
+/* Tablets */
 @media screen and (min-width: 768px) and (max-width: 991px) {
     .parkoverview-header-content {
-        padding: 150px 0 100px 0;
+        padding: 7em 1em;
+        flex-basis: 70%;
+        margin: 1em;
     }
     .parkoverview-header-content h1 {
-        margin: 15px;
+        margin: 1em;
+    }
+    .parkoverview-text-section {
+        margin-top: 2em;
+        padding: 1em 2em;
+        line-height: 1.25em;
+    }
+    .parkoverview-text-section-content {
+        max-width: 60%;
+    }
+    .parkoverview-text-section-content h3 {
+        margin: 0.4em 0;
+    }
+    .parkoverview-text-section-content h5 {
+        margin: 0.4em 0;
+    }
+    .filter-and-buttons {
+        margin: 2em 0;
+    }
+    .style-filter-menu {
+        width: 175px;
+        font-size: 1em;
+        padding: 0.75em 1em;
+    }
+    .park-cards-inner-container {
+        padding: 0 1em;
+        gap: 2em;
+        margin: 0 1.5em;
+    }
+    .park-card {
+        width: 300px;
+        height: 225px;
+        margin: 0.75em;
+    }
+    .park-card h2 {
+        padding: 0 0.25em;
     }
 }
 
-/* Large Devices (desktops, 992px and up) */
+/* Grote tablets en kleine computer schermen */
 @media screen and (min-width: 992px) and (max-width: 1199px) {
     .parkoverview-header-content {
-        padding: 150px 0 100px 0;
+        padding: 5em 1em;
+        flex-basis: 70%;
+        margin: 1em;
     }
     .parkoverview-header-content h1 {
-        margin: 15px;
+        margin: 1em;
+    }
+    .parkoverview-text-section {
+        margin-top: 2em;
+        padding: 1em 2em;
+        line-height: 1.5em;
+    }
+    .parkoverview-text-section-content {
+        max-width: 60%;
+    }
+    .parkoverview-text-section-content h3 {
+        margin: 0.5em 0;
+    }
+    .parkoverview-text-section-content h5 {
+        margin: 0.5em 0;
+    }
+    .filter-and-buttons {
+        margin: 2.5em 0;
+    }
+    .style-filter-menu {
+        width: 175px;
+        font-size: 1em;
+        padding: 0.75em 1em;
+    }
+    .park-cards-inner-container {
+        padding: 0 1em;
+        gap: 1.5em;
+        margin: 0 2em;
+    }
+    .park-card {
+        width: 400px;
+        height: 300px;
+        margin: 1.5em;
+    }
+    .park-card h2 {
+        padding: 0 0.5em;
     }
 }
 
-/* Extra Large Devices (large desktops, 1200px and up) */
-@media screen and (min-width: 1200px) {
+/* Standaard computer scherm */
+@media screen and (min-width: 1200px) and (max-width: 1599px) {
     .parkoverview-header-content {
-        padding: 150px 0 100px 0;
+        padding: 10em 1em;
+        flex-basis: 80%;
+        margin: 1em;
     }
     .parkoverview-header-content h1 {
-        margin: 15px;
+        margin: 1em;
+    }
+    .parkoverview-text-section {
+        margin-top: 2em;
+        padding: 1em 2em;
+        line-height: 1.75em;
+    }
+    .parkoverview-text-section-content {
+        max-width: 50%;
+    }
+    .parkoverview-text-section-content h3 {
+        margin: 0.5em 0;
+    }
+    .parkoverview-text-section-content h5 {
+        margin: 0.5em 0;
+    }
+    .filter-and-buttons {
+        margin: 2.5em 0;
+    }
+    .style-filter-menu {
+        width: 200px;
+        font-size: 1.25em;
+        padding: 0.5em 1em;
+    }
+    .park-cards-inner-container {
+        padding: 0 1.5em;
+        gap: 3em;
+        margin: 0 1em;
+    }
+    .park-card {
+        width: 500px;
+        height: 375px;
+        margin: 3em;
+    }
+    .park-card h2 {
+        padding: 0 0.5em;
+    }
+}
+
+/* Extra Large computer schermen */
+@media screen and (min-width: 1600px) {
+    .parkoverview-header-content {
+        padding: 20em 1em;
+        flex-basis: 60%;
+        margin: 1em;
+    }
+    .parkoverview-header-content h1 {
+        margin: 1em;
+    }
+    .parkoverview-text-section {
+        margin-top: 2em;
+        padding: 1em 2em;
+        line-height: 2em;
+    }
+    .parkoverview-text-section-content {
+        max-width: 40%;
+    }
+    .parkoverview-text-section-content h3 {
+        margin: 0.5em 0;
+    }
+    .parkoverview-text-section-content h5 {
+        margin: 0.5em 0;
+    }
+    .filter-and-buttons {
+        margin: 3em 0;
+    }
+    .style-filter-menu {
+        width: 200px;
+        font-size: 1.25em;
+        padding: 0.5em 1em;
+    }
+    .park-cards-inner-container {
+        padding: 0 2em;
+        gap: 8em;
+        margin: 0 4em;
+    }
+    .park-card {
+        width: 600px;
+        height: 450px;
+        margin: 2em;
+    }
+    .park-card h2 {
+        padding: 0 0.25em;
     }
 }
